--- a/apps/ios/ieltseye/www/css/index.css
+++ b/apps/ios/ieltseye/www/css/index.css
@@ -22,9 +22,9 @@
 
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: text;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
     height:100%;
     margin:0px;
     padding:0px;
@@ -36,7 +36,7 @@ body {
 }
 
 
-
+/*
 
 
 .label,
@@ -141,4 +141,4 @@ a.badge:focus {
 .btn-mini .badge {
   top: 0;
 }
-
+*/
